Updated main index DOX file for EPC9153

--- a/.mchp_private/doxygen_src/dox-files/index.dox
+++ b/.mchp_private/doxygen_src/dox-files/index.dox
@@ -109,6 +109,10 @@
 
 //Abstraction Layer Defines index
 /**
+ @defgroup hardware-abstraction Hardware Abstraction
+ @ingroup abstraction-layer 
+ @brief 
+
  @defgroup microcontroller-abstraction Microcontroller Abstraction
  @ingroup abstraction-layer 
  @brief 
